--- a/templates/account/auth/confirm.html
+++ b/templates/account/auth/confirm.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_head %}
-	<title>Account Verified</title>
+	<title>Account Verified | Sakkhat</title>
 {% endblock %}
 
 
