--- a/templates/account/auth/signout.html
+++ b/templates/account/auth/signout.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_head %}
-	<title>Sign Out</title>
+	<title>Signed Out | Sakkhat</title>
 	<link rel="stylesheet" type="text/css" href="{% static 'css/generic/product_post_card.css' %}">
 {% endblock %}
 
