--- a/templates/account/auth/signup.html
+++ b/templates/account/auth/signup.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_head %}
-	<title>Sign Up</title>
+	<title>Sign Up | Sakkhat</title>
 	<link rel="stylesheet" type="text/css" href="{% static 'css/account/auth/signup.css' %}">
 {% endblock %}
 
