--- a/templates/account/auth/verify.html
+++ b/templates/account/auth/verify.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_head %}
-	<title>Verify email</title>
+	<title>Verify email | Sakkhat</title>
 {% endblock %}
 
 
