--- a/templates/account/password/reset-complete.html
+++ b/templates/account/password/reset-complete.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_head %}
-	<title>Password Reset Complete</title>
+	<title>Password Reset Complete | Sakkhat</title>
 {% endblock %}
 
 
