--- a/templates/account/password/reset-confirm.html
+++ b/templates/account/password/reset-confirm.html
@@ -3,7 +3,7 @@
 
 
 {% block extra_head %}
-	<title>Reset Password</title>
+	<title>Reset Password | Sakkhat</title>
 	<link rel="stylesheet" type="text/css" href="{% static 'css/generic/form-std.css'%}">
 {% endblock %}
 
