--- a/templates/account/password/reset-done.html
+++ b/templates/account/password/reset-done.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_head %}
-	<title>Password Reset Request Done</title>
+	<title>Password Reset Request Done | Sakkhat</title>
 {% endblock %}
 
 
