--- a/templates/account/password/reset.html
+++ b/templates/account/password/reset.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_head %}
-	<title>Password Reset</title>
+	<title>Password Reset | Sakkhat</title>
 	<link rel="stylesheet" type="text/css" href="{% static 'css/generic/form-std.css'%}">
 {% endblock %}
 
