--- a/templates/account/password/change.html
+++ b/templates/account/password/change.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_head %}
-	<title>Password Change</title>
+	<title>Password Change | Sakkhat</title>
 	<link rel="stylesheet" type="text/css" href="{% static 'css/account/auth/signin.css' %}">
 {% endblock %}
 
