--- a/templates/generic/views/error404.html
+++ b/templates/generic/views/error404.html
@@ -7,7 +7,8 @@
 
 
 {% block extra_content %}
-    <p class="display-4 text-center">Requested Page Not Found</p>
+    <p class="display-4 text-center"><i class="fa fa-bug"></i></p>
+    <p class="display-4 text-center" style="font-size: 5vw;">Requested Page Not Found</p>
 {% endblock %}
 
 	
