--- a/templates/generic/views/password_confirmation.html
+++ b/templates/generic/views/password_confirmation.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block extra_head %}
-	<title>Password Confirmation</title>
+	<title>Password Confirmation | Sakkhat</title>
 {% endblock %}
 
 
