--- a/templates/home/filtering/search.html
+++ b/templates/home/filtering/search.html
@@ -1,10 +1,17 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load filter %}
 
 {% block extra_head %}
 	<title>Search - {{ query }}</title>
 	{% if what == 'product' %}
-		<link rel="stylesheet" type="text/css" href="{% static 'lib/css/emoji.css'%}">
+		{% developing_mode as developing %}
+		{% if developing %}
+			<link rel="stylesheet" type="text/css" href="{% static 'lib/css/emoji.css'%}">
+		{% else %}
+			<link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
+		{% endif %}
+
     	<link rel="stylesheet" type="text/css" href="{% static 'css/generic/card.css' %}">
 	{% elif what == 'space' %}
 		<link rel="stylesheet" type="text/css" href="{% static 'css/generic/space-box.css' %}">
@@ -56,9 +63,16 @@
 {% block extra_script %}
 
 	{% if what == 'product' or what == 'space' %}
-		<script type="text/javascript" src="{% static 'lib/js/react.min.js' %}"></script>
-	    <script type="text/javascript" src="{% static 'lib/js/react-dom.min.js' %}"></script>
-	    <script type="text/javascript" src="{% static 'lib/js/browser.min.js' %}"></script>
+		{% developing_mode as developing %}
+	    {% if developing %}
+	        <script type="text/javascript" src="{% static 'lib/js/react.min.js' %}"></script>
+	        <script type="text/javascript" src="{% static 'lib/js/react-dom.min.js' %}"></script>
+	        <script type="text/javascript" src="{% static 'lib/js/browser.min.js' %}"></script>
+	    {% else %}
+	        <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+	        <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+	        <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.js"></script>
+	    {% endif %}
 
 	{% endif %}
 
