--- a/templates/space/manage/index.html
+++ b/templates/space/manage/index.html
@@ -4,7 +4,13 @@
 
 {% block extra_head %}
 	<title>{{ space.display_name }}</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'lib/css/emoji.css' %}">
+    {% developing_mode as developing %}
+    {% if developing %}
+        <link rel="stylesheet" type="text/css" href="{% static 'lib/css/emoji.css'%}">
+    {% else %}
+        <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
+    {% endif %}
+    
     <link rel="stylesheet" type="text/css" href="{% static 'css/generic/card.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/generic/container.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/space/manage/index.css' %}">
@@ -88,9 +94,16 @@
 
 
 {% block extra_script %}
-    <script type="text/javascript" src="{% static 'lib/js/react.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'lib/js/react-dom.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'lib/js/browser.min.js' %}"></script>
+    {% developing_mode as developing %}
+    {% if developing %}
+        <script type="text/javascript" src="{% static 'lib/js/react.min.js' %}"></script>
+        <script type="text/javascript" src="{% static 'lib/js/react-dom.min.js' %}"></script>
+        <script type="text/javascript" src="{% static 'lib/js/browser.min.js' %}"></script>
+    {% else %}
+        <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+        <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.js"></script>
+    {% endif %}
     
     <script type="text/babel" src="{% static 'react/product-cards.js' %}"></script>
 
