--- a/templates/account/manage/profile.html
+++ b/templates/account/manage/profile.html
@@ -56,7 +56,7 @@
                                 </tr>
                             </tbody>
                         </table>
-                        <a href="/space/{{space.name}}/" class="list-group-item bg-primary">
+                        <a href="/{{space.name}}/" class="list-group-item bg-primary">
                             <h5 class="text-center text-white mt-0 mb-0">GO Dashboard</h5>
                         </a>
                         <br><br>
