--- a/templates/account/manage/update.html
+++ b/templates/account/manage/update.html
@@ -44,6 +44,10 @@
                             {{ form.email }}
                         </div>
                         <div class="list-group-item">
+                            {{ form.phone.label}}
+                            {{ form.phone }}
+                        </div>
+                        <div class="list-group-item">
                             {{ form.gender.label}}
                             {{ form.gender }}
                         </div>
