--- a/templates/account/manage/profile.html
+++ b/templates/account/manage/profile.html
@@ -37,7 +37,7 @@
                         <p>Currently beta version is running. No fee will be charged for anything. Check out the <a href="/page/terms/">Terms of service</a></p>
                     </div>
                     <div>
-                        <h5 class="list-group-item text-center list-group-item-dark">{{space.name}}</h5>
+                        <h5 class="list-group-item text-center list-group-item-dark">@{{space.name}}</h5>
                         <table class="table table-bordered table-secondary mb-0">
                             <thead>
                                 <tr>
