--- a/templates/base.html
+++ b/templates/base.html
@@ -76,7 +76,7 @@
                                 </div>
                                 <div class="dropdown-menu dropdown-menu-right" role="menu">
                                     <a class="list-group-item list-group-item-action" href="/account/">
-                                        {{ request.user.name }}
+                                        Profile
                                     </a>
                                     {% if not request.user.has_space %}
                                         <a class="list-group-item list-group-item-action" href="/space/create/">
