--- a/templates/generic/views/error500.html
+++ b/templates/generic/views/error500.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block extra_head %}
 	<title>Error 500</title>
@@ -6,7 +7,8 @@
 
 
 {% block extra_content %}
-    <p class="display-4 text-center">Internal Server Error</p>
+    <p class="display-4 text-center"><i class="fa fa-frown-o"></i></p>
+    <p class="display-4 text-center" style="font-size: 5vw;">Internal Server Error</p>
 {% endblock %}
 
 	
