--- a/templates/home/pages/feedback.html
+++ b/templates/home/pages/feedback.html
@@ -20,9 +20,26 @@
 				{% if sent %}
 					<h6 class="list-group-item list-group-item-success">Thanks for your feedback</h6>
 				{% endif %}
+				{% if form.errors %}
+                    {% for field in form %}
+                        {% for error in field.errors %}
+                            <div class="alert alert-danger">
+                                <strong>{{ error|escape }}</strong>
+                            </div>
+                        {% endfor %}
+                    {% endfor %}
+                    {% for error in form.non_field_errors %}
+                        <div class="alert alert-danger">
+                            <strong>{{ error|escape }}</strong>
+                        </div>
+                    {% endfor %}
+                {% endif %}
 				<form method="POST" class="list-group-item list-group-item-info">
 					{% csrf_token %}
-					{{ form.as_p }}
+					{{ form.body.label }}
+					{{ form.body}}
+					{{ form.email.label }}
+					{{ form.email}}
 					<button class="btn btn-success">Send</button>
 				</form>
 			</div>
