--- a/templates/home/pages/about.html
+++ b/templates/home/pages/about.html
@@ -39,7 +39,7 @@
 		<div class="row">
 			<div class="col-md-12 block-text">
 				<h6 class="display-4">Product Post</h6>
-				<article class="lead">A space can create a post for a product.</article>
+				<article class="lead">A space can create a post for a product. Other user can pin and react on a product. Pin and react point will be appear in space rating. Most good react's product will take place in trending zone (max 50).</article>
 			</div>
 		</div>
 	</div>
