--- a/templates/space/product/single.html
+++ b/templates/space/product/single.html
@@ -3,12 +3,12 @@
 {% load filter %}
 {% block extra_head %}
     
-    <meta property="og:title" content="{{product.title}}">
-    <meta property="og:site_name" content="Sakkhat">
-    <meta property="og:description" content="@{{product.space.name}} | {{product.category}} | {{product.description}}">
-    <meta property="og:image" content="{{current_site}}{{product.logo_url}}">
-    <meta property="og:url" content="{{ current_site }}">
-    <meta property="fb:app_id" content="1320512341429071">
+    <meta property="og:title"       content="{{product.title}}">
+    <meta property="og:site_name"   content="Sakkhat">
+    <meta property="og:description" content="meet your needs">
+    <meta property="og:image"       content="{{current_site}}{{product.logo_url}}">
+    <meta property="og:url"         content="{{ current_site }}">
+    <meta property="fb:app_id"      content="1320512341429071">
 
     <title>{{ product.title }} | {{ product.space.display_name }}</title>
 
@@ -23,7 +23,6 @@
         <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
     {% endif %}
 
-	
 
     <link rel="stylesheet" type="text/css" href="{% static 'css/space/product/single.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/generic/card.css' %}">
@@ -79,7 +78,9 @@
                 <div class="list-group-item">
                     <a class="btn btn-sm btn-outline-dark" href="/explore/product/?category={{product.category}}">{{ product.category }}</a>
                     <div class="float-right">
-                        <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&layout=button&size=large&appId=1320512341429071&width=73&height=28" width="73" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+
+                        <div class="fb-share-button" data-href="{{current_site}}{{request.get_full_path}}" data-layout="button" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
+
                     </div>
                 </div>
                 <div class="list-group-item description">
@@ -173,12 +174,21 @@
             </div>
         </div>
     </div>
-
 {% endblock %}
 
 
 {% block extra_script %}
-	
+    <div id="fb-root"></div>
+    <script>
+        (function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
+
     <script type="text/javascript" src="{% static 'js/space/product/single.js'%}"></script>
     <script type="text/javascript" src="{% static 'js/generic/slider.js'%}"></script>
     
